fix: empty-state text colour changed for better visibility

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
      --hover-color: #dbeafe;
      --success-color: #22c55e;
      --danger-color: #ef4444;
+     --empty-state-color: #b9b9b9;
 }
 
 /* Dark Theme color config*/
@@ -18,6 +19,7 @@
      --component-bg: #374151;
      --border-color: #4b5563;
      --hover-color: #1e3a8a;
+     --empty-state-color: #888888;
 }
 
 * {
@@ -488,7 +490,7 @@ header.navbar {
          -ms-flex-pack: center;
              justify-content: center;
      height: 100%;
-     color: var(--border-color);
+     color: var(--empty-state-color);
 }
 
 .toast-container{
